welcome.lessons.welcome.methods.picture.MethodsPicture.scala.error
MethodsPicture:5: error: missing arguments for method setCouleurBrosse in class AbstractBuggle;
follow this method with `_' if you want to treat it as a partially applied function
			setCouleurBrosse()=Color.Yellow;
                        ^MethodsPicture:13: error: missing arguments for method setCouleurBrosse in class AbstractBuggle;
follow this method with `_' if you want to treat it as a partially applied function
			setCouleurBrosse()=Color.Red;
                        ^MethodsPicture:21: error: missing arguments for method setCouleurBrosse in class AbstractBuggle;
follow this method with `_' if you want to treat it as a partially applied function
			setCouleurBrosse()=Color.Blue;
                        ^MethodsPicture:29: error: missing arguments for method setCouleurBrosse in class AbstractBuggle;
follow this method with `_' if you want to treat it as a partially applied function
			setCouleurBrosse()=Color.Green;
                        ^